syntax = "proto3";
package google.protobuf;

service TerminalToMediator {
    rpc DeInit(Request) returns (Response);
    rpc Init(Request) returns (Response);
}

message Request {
    string requestMessage = 1;
}

message Response {
    string responseMessage = 1;
    string reasonMessage = 2;
}